# digestor

./: .env.example  .gitignore  CLAUDE.md  digestor.code-workspace  pyproject.toml  requirements.txt
.claude/: gyro-config.json  hooks-config.json  validation-config.json
.claude/commands/advanced/: production-readiness.md  workflow-orchestrator.md
.claude/execution-modes/: autopilot-config.md  hybrid-config.md  supervised-config.md
.claude/hooks/development-events/: pre-commit.md
.claude/hooks/file-events/: on-save.md
.claude/hooks/templates/: test-generator-hook.md
.claude/steering/: domain-specific.md  product.md  structure.md  tech.md
config/: project-config.json
docs/specifications/: PRD.md  digestor-prd-v0.md
